cmake_minimum_required(VERSION 3.10)
project(AOJ)

set(CMAKE_CXX_STANDARD 14)
include_directories(c:/lib/include/boost-1_67)



add_executable(CGL_7_B CGL_7_B.cpp)
add_executable(CGL_7_H CGL_7_H.cpp)
add_executable(2684 2684.cpp)
add_executable(1182 1182.cpp)
add_executable(1611 1611.cpp)
add_executable(1161 1161.cpp)
add_executable(2152 2152.cpp)
add_executable(1195 1195.cpp)
add_executable(2584 2584.cpp)
add_executable(2182 2182.cpp)
add_executable(2402 2402.cpp)
add_executable(2945 2945.cpp)
add_executable(2157 2157.cpp)
add_executable(2948 2948.cpp)
add_executable(2156 2156.cpp)
add_executable(2536 2536.cpp)
add_executable(2435 2435.cpp)
add_executable(2677 2677.cpp)
add_executable(aaabbb aaabbb.cpp)
add_executable(cccddd cccddd.cpp)
add_executable(main main.cpp)